--- a/Maquinaria/MainWindow.xaml
+++ b/Maquinaria/MainWindow.xaml
@@ -5,30 +5,13 @@
     <WrapPanel>
         <!--Seccion de Personas-->
         <Border BorderBrush="Black" BorderThickness="2" Margin="2">
-            <StackPanel Name="pnlPersonas" Width="250" Height="100" Margin="10">
+            <StackPanel Width="250"  Margin="10">
                 <StackPanel Orientation="Horizontal" Margin="5">
                     <TextBlock Text="PERSONAS" ></TextBlock>
                 </StackPanel>
-
-                <DockPanel Margin="5" >
-                    <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
-                        <Button Name="cliConsultar" Content="Consultar"></Button>
-                        <Button Name="cliAdd" Content="Añadir"></Button>
-                    </StackPanel>
-                    <TextBlock Name="cliCantidad" Margin="0,0,15,0" Text="0" DockPanel.Dock="Right"></TextBlock>
-                    <TextBlock Text="Clientes" Margin="15,0,0,0"></TextBlock>
-
-                </DockPanel>
-
-                <DockPanel Margin="5" >
-                    <StackPanel Margin="0,0,0,0" Orientation="Horizontal" DockPanel.Dock="Right">
-                        <Button Name="provConsultar" Content="Consultar"></Button>
-                        <Button Name="provAdd" Content="Añadir"></Button>
-                    </StackPanel>
-                    <TextBlock Name="provCantidad" Margin="0,0,15,0" Text="0" DockPanel.Dock="Right"></TextBlock>
-                    <TextBlock Text="Proveedores"  Margin="15,0,0,0"></TextBlock>
-
-                </DockPanel>
+                <StackPanel Name="pnlPersonas" >
+                    
+                </StackPanel>
             </StackPanel>
         </Border>
         <!--Seccion de Máquinas-->
